chore: fix PR comments